--- a/monthly_tweet_report.Rmd
+++ b/monthly_tweet_report.Rmd
@@ -110,8 +110,12 @@ main_ids <- tibble::tribble(
   "Botega_AF",          "1902521779161292800",
   "samecwilliams",      "409642632",
   "TateBerenbaum",      "801518825690824707",
-  "ArweaveEco",         "892752981736779776"
+  "ArweaveEco",         "892752981736779776",
+  "outprog_ar",         "2250655424",
+  "HyMatrixOrg",        "1948283615248568320",
+  "EverVisionLabs",     "1742119960535789568"
 )
+
 
 
 # tweets_raw is the data frame you showed
@@ -418,5 +422,6 @@ ggplot(emotion_by_post_type, aes(x = emotion_type, y = percent, fill = emotion_t
 
 
 ```
+
 
 
